Conversation reference.